<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/selector_dashboard"
        />

    <item
        android:id="@+id/subjects"
        android:title="@string/subjects"
        android:icon="@drawable/selector_subject"
        />

    <item
        android:id="@+id/grades"
        android:title="@string/grades"
        android:icon="@drawable/selector_grades"
        />
    <item
        android:id="@+id/enrollHistory"
        android:title="@string/enroll_history"
        android:icon="@drawable/selector_evaluation"
        />

    <item
        android:id="@+id/accounts"
        android:title="@string/accounts"
        android:icon="@drawable/selector_account"
        />

    <!--<item
        android:id="@+id/more"
        android:title="More"
        android:icon="@drawable/ic_more_horiz"
        />-->


</menu>