<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cash_vanishing" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTerm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="10dp"
        app:contentPaddingBottom="10dp"
        app:contentPaddingLeft="20dp"
        app:contentPaddingRight="20dp"
        app:contentPaddingTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2023_2024_2nd_semester"
            android:textAppearance="?textAppearanceBody2" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.CardView.Filled"
        android:layout_marginTop="20dp"
        android:backgroundTint="?colorSecondaryContainer"
        app:cardCornerRadius="5dp"
        app:contentPadding="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cardTerm">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDueText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="?textAppearanceBodyLarge" />

            <TextView
                android:id="@+id/tvDue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textAppearance="?textAppearanceTitleLarge" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnViewDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                style="@style/Widget.Material3.Button.TextButton"
                android:text="@string/view_details"
                app:icon="@drawable/ic_books_outline"
                app:iconGravity="textStart"
                android:layout_marginTop="20dp"
                android:textAppearance="?textAppearanceLabelMedium"
                android:layout_marginEnd="30dp"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>